--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: flutter_iconographic
-description: A new Flutter package project.
+description: Flutter Iconograph is a widget to show an icon as a graph, support vertical and horizontal direction. You can specify an icon for full, half and empty icon.
 version: 0.0.1
 homepage:
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: ">=2.18.6 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
