--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: flutter_iconographic
 description: Flutter Iconograph is a widget to show an icon as a graph, support vertical and horizontal direction. You can specify an icon for full, half and empty icon.
 version: 0.0.2
-homepage:
+homepage: https://github.com/anoochit/flutter_iconographic
+repository: https://github.com/anoochit/flutter_iconographic
+issue_tracker: https://github.com/anoochit/flutter_iconographic/issues
 
 environment:
   sdk: ">=2.18.6 <3.0.0"
